--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,11 @@
     height: 2rem;
     background-color: blueviolet;
 }
+
+.debug #site_main .card{
+    height: 150px;
+    border: 1px dashed black;
+}
 /* --------------------
     /debug_section
 -------------------- */
@@ -36,6 +41,54 @@
 
 .d-flex{
     display: flex;
+}
+
+.col-1{
+width: calc(100% / 12);
+}
+
+.col-2{
+width: calc(100% / 12 * 2);
+}
+
+.col-3{
+width: calc(100% / 12 * 3);
+}
+
+.col-4{
+width: calc(100% /12 * 4);
+}
+
+.col-5{
+width: calc(100% / 12 * 5);
+}
+
+.col-6{
+width: 50%;
+}
+
+.col-7{
+width: calc(100% / 12 * 7);
+}
+
+.col-8{
+width: calc(100% / 12 * 8);
+}
+
+.col-9{
+width: calc(100% / 12 * 9);
+}
+
+.col-10{
+width: calc(100% / 12 * 10);
+}
+
+.col-11{
+width: calc(100% / 12 * 11);
+}
+
+.col-12{
+width: 100%;
 }
 /* --------------------
   /utilities_section
@@ -57,6 +110,12 @@
 
 .menu_icon{
     display: none;
+}
+
+/* demo_section */
+.demo_section .row{
+    margin: 2rem 0;
+    flex-wrap: wrap;
 }
 /* --------------------
      /general_css
