--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
 /* --------------------
      debug_section
 -------------------- */
+/* header */
 .debug #site_header{
     height: 4rem;
     width: 100%;
@@ -22,8 +23,19 @@
     background-color: blueviolet;
 }
 
+/* main */
 .debug #site_main .card{
     height: 150px;
+    border: 1px dashed black;
+}
+
+/* planning_section */
+.debug .planning_section{
+    background-color: blue;
+}
+
+.debug .planning_section .col{
+    height: 400px;
     border: 1px dashed black;
 }
 /* --------------------
@@ -116,6 +128,11 @@ width: 100%;
 .demo_section .row{
     margin: 2rem 0;
     flex-wrap: wrap;
+}
+
+/* planning_section */
+.planning_section .col{
+    margin: 2rem 0;
 }
 /* --------------------
      /general_css
