--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,12 @@
 .debug .benefits_section{
     background-color: blue;
 }
+
+/* about_section */
+.debug .about_section .col{
+    height: 400px;
+    border: 1px dashed black;
+}
 /* --------------------
     /debug_section
 -------------------- */
@@ -150,18 +156,23 @@ width: 100%;
 
 /* demo_section */
 .demo_section .row{
-    margin: 2rem 0;
+    padding: 2rem 0;
     flex-wrap: wrap;
 }
 
 /* planning_section */
-.planning_section .col{
-    margin: 2rem 0;
+.planning_section .row{
+    padding: 2rem 0;
 }
 
 /* benefits_section */
 .benefits_section .row{
     flex-wrap: wrap;
+    padding: 2rem 0;
+}
+
+/* about_section */
+.about_section .row{
     padding: 2rem 0;
 }
 /* --------------------
