fix comment in media query section

--- a/css/style.css
+++ b/css/style.css
@@ -222,7 +222,7 @@ width: 100%;
 /* --------------------
       media_query
 -------------------- */
-/* tablet_view */
+/* menu_fix--->to_verify_with_content */
 @media screen and (max-width: 975px) {
     .menu li{
         display: none;
@@ -233,7 +233,7 @@ width: 100%;
     }
 }
 
-
+/* tablet_view */
 @media screen and (max-width: 768px) {
     .planning_section .col-md-12{
         width:100%;
