--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
+    font-family: 'PT Sans', sans-serif;
 }
 
 :root{
@@ -173,7 +174,7 @@ width: 100%;
 .btn{
     background-color: var(--color-ligth);
     padding: 0.5rem 1.5rem;
-    border-radius: 1rem;
+    border-radius: 1.5rem;
 }
 
 img{
@@ -189,15 +190,14 @@ img{
     align-self: flex-end;
 }
 
-p,h2{
-    padding-bottom: 1rem;
-}
-
 h2{
     font-size: 2rem;
+    margin-top: .5rem ;
+    margin-bottom: 1rem;
 }
 
 p{
+    padding-bottom: 1rem;
     line-height: 1.5rem;
 }
 
@@ -205,8 +205,12 @@ p{
     padding: 1rem 0;
 }
 
-.pb-12{
-    padding-bottom: 3rem;
+.pb-0{
+    padding-bottom: 0;
+}
+
+.pb-8{
+    padding-bottom: 2rem;
 }
 
 .pb-20{
@@ -268,10 +272,14 @@ p{
 
 .demo_section .card{
     background-color: var(--secondary-color);
-    padding: 1rem 1rem 0;
+    padding: 1rem;
     border-radius: 1rem;
     flex-wrap: wrap;
     height: 100%;
+}
+
+.demo_section .pb-0{
+    padding-bottom: 0;
 }
 
 .card_items img{
@@ -281,10 +289,11 @@ p{
 .card_items .icon{
     font-size: 4rem;
     color: var(--primary-color);
-    margin-bottom: 1rem;
+    margin-bottom: .5rem;
 }
 
 .card_items h2{
+    font-size: 1.5rem;
     color: var(--primary-color);
 }
 
@@ -322,9 +331,11 @@ p{
 
 .planning_section .icon{
     background-color: var(--accent-color);
-    padding: 1rem;
     border-radius: 50%;
     color: #67649b;
+    width: 50px;
+    aspect-ratio: 1;
+    line-height: 50px;
 }
 
 /* testimonials_section */
@@ -338,6 +349,10 @@ p{
 
 .subtitle, .name{
     text-transform: uppercase;
+}
+
+.name{
+    font-weight: bold;
 }
 
 .card_text p::before{
@@ -436,6 +451,7 @@ p{
 
 .about_section .about_avatar{
     position: relative;
+    min-width: 200px;
 }
 
 .about_section img{
@@ -450,16 +466,26 @@ p{
     right: 0;
 }
 
-.about_section .about_avatar h3{
+.about_section p{
+    padding-bottom: 2.5rem;
+}
+
+.about_section h3{
     padding: 2rem 0;
     color: var(--accent-color);
     font-size: 1.5rem;
 }
 
-.about_avatar .btn{
+.about_section .btn{
     background-color: var(--accent-color);
     color: var(--color-ligth);
     width: fit-content;
+    font-size: .8rem;
+    padding: .5rem 1rem;
+
+    & .icon{
+        padding-right: .5rem;
+    }
 }
 
 /* pricing_section */
@@ -476,7 +502,33 @@ p{
 
     & h2{
         color: var(--color-extra);
-        padding: 1rem 0;
+        font-size: 3rem;
+    }
+
+    & h3{
+        font-size: 2rem;
+    }
+
+    & h5,p{
+        font-size: .7rem;
+        font-weight: normal;
+        margin: 0 15%;
+    }
+
+    & h5{
+        opacity: 0.5;
+    }
+
+    & .dot{
+        font-size: .25rem;
+        padding: 0 .2rem;
+        line-height: .7rem;
+        vertical-align: middle;
+    }
+
+    & a{
+        color: var(--color-ligth);
+        text-decoration: underline;
     }
 }
 
@@ -484,6 +536,9 @@ p{
     color: var(--accent-color);
     width: fit-content;
     margin: auto;
+    padding: 1rem 3rem;
+    border-radius: 3rem;
+    margin-bottom: 1rem;
 }
 /* site_footer */
 #site_footer .secondary_container{
@@ -498,6 +553,10 @@ p{
         color: var(--accent-color);
         text-decoration: underline;
     }
+
+    & p{
+        font-size: .7rem;
+    }
 }
 /* --------------------
      /general_css
@@ -507,7 +566,7 @@ p{
       media_query
 -------------------- */
 /* tablet_view */
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 768px) {
     .demo_section .col-md-8, .about_section .col-md-8{
         width: calc(100% / 12 * 8);
     }
@@ -520,12 +579,20 @@ p{
         width: 50%;
     }
 
+    .about_section .col-md-12{
+        width: 100%;
+    }
+
     .testimonials_section .card{
         flex-direction: row;
     }
 
     .secondary_container{
         width: 70%;
+    }
+
+    .tx-md-left{
+        text-align: left;
     }
 }
 
